// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/locations/LocationForm Snapshots Default 1`] = `
<div
  class="container white"
>
  <div
    class="grey--text"
  >
    <div
      class="flex"
    >
      <div
        class="layout row"
      >
        <div
          class="flex xs12 sm6"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Category
        
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <!---->
     
    <div
      class="flex text-xs-center"
    >
      
    MAP coming soon
    
      <div
        style="background-color: rgb(229, 229, 229); height: 150px;"
      />
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex pr-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex pl-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Capacity
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex"
    >
      <div
        class="mb-2 text-uppercase grey--text font-weight-bold"
      >
        
      Description
    
      </div>
       
      <div
        class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <textarea
                rows="5"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <span
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex py-3 d-flex justify-space-between"
    >
      <button
        class="v-btn v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save changes
    
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/locations/LocationForm Snapshots Indoor 1`] = `
<div
  class="container white"
>
  <div
    class="grey--text white"
  >
    <div
      class="flex"
    >
      <div
        class="layout row"
      >
        <div
          class="flex xs12 sm6"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Category
        
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      Indoor
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Indoor
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Outdoor
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <input
        class="ff-add-location__file_input"
        multiple="multiple"
        type="file"
      />
        
      <div
        class="layout align-center column"
      >
        <div
          class="flex"
        >
          <button
            class="white--text v-btn v-btn--depressed theme--light grey"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left  fas fa-upload theme--dark"
              />
              
          upload Floor Image / Attachment
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <!---->
     
    <div
      class="layout"
    >
      <div
        class="flex pr-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex pl-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Capacity
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex"
    >
      <div
        class="mb-2 text-uppercase grey--text font-weight-bold"
      >
        
      Description
    
      </div>
       
      <div
        class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <textarea
                rows="5"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <span
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex py-3 d-flex justify-space-between"
    >
      <button
        class="v-btn v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save changes
    
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/locations/LocationForm Snapshots Outdoor 1`] = `
<div
  class="container white"
>
  <div
    class="grey--text white"
  >
    <div
      class="flex"
    >
      <div
        class="layout row"
      >
        <div
          class="flex xs12 sm6"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Category
        
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      Outdoor
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Indoor
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Outdoor
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <!---->
     
    <div
      class="flex text-xs-center"
    >
      
    MAP coming soon
    
      <div
        style="background-color: rgb(229, 229, 229); height: 150px;"
      />
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex pr-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex pl-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Capacity
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex"
    >
      <div
        class="mb-2 text-uppercase grey--text font-weight-bold"
      >
        
      Description
    
      </div>
       
      <div
        class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <textarea
                rows="5"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <span
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex py-3 d-flex justify-space-between"
    >
      <button
        class="v-btn v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save changes
    
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/locations/LocationForm Snapshots WithDocuments 1`] = `
<div
  class="container white"
>
  <div
    class="grey--text white"
  >
    <div
      class="flex"
    >
      <div
        class="layout row"
      >
        <div
          class="flex xs12 sm6"
        >
          <div
            class="mb-2 text-uppercase grey--text font-weight-bold"
          >
            
          Category
        
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      Indoor
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Indoor
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Outdoor
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <input
        class="ff-add-location__file_input"
        multiple="multiple"
        type="file"
      />
       
      <div>
        <div
          class="ff-add-location__document_item"
        >
          <span
            class="text-uppercase primary--text font-weight-bold"
          >
            FLOOR_PLAN_1.PDF
          </span>
           
          <span
            class="font-weight-bold"
          >
            
          120.54 KB
          
            <button
              class="v-btn v-btn--flat v-btn--icon theme--light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon fas fa-trash theme--light grey--text"
                  style="font-size: 15px;"
                />
              </div>
            </button>
          </span>
        </div>
         
        <hr
          class="v-divider theme--light"
        />
      </div>
      <div>
        <div
          class="ff-add-location__document_item"
        >
          <span
            class="text-uppercase primary--text font-weight-bold"
          >
            FLOOR_PLAN_2.PDF
          </span>
           
          <span
            class="font-weight-bold"
          >
            
          336.75 KB
          
            <button
              class="v-btn v-btn--flat v-btn--icon theme--light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon fas fa-trash theme--light grey--text"
                  style="font-size: 15px;"
                />
              </div>
            </button>
          </span>
        </div>
         
        <hr
          class="v-divider theme--light"
        />
      </div>
       
      <div
        class="layout align-center column"
      >
        <div
          class="flex"
        >
          <button
            class="white--text v-btn v-btn--depressed theme--light grey"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left  fas fa-upload theme--dark"
              />
              
          upload Floor Image / Attachment
        
            </div>
          </button>
        </div>
      </div>
    </div>
     
    <!---->
     
    <div
      class="layout"
    >
      <div
        class="flex pr-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Location
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex pl-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Capacity
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex"
    >
      <div
        class="mb-2 text-uppercase grey--text font-weight-bold"
      >
        
      Description
    
      </div>
       
      <div
        class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <textarea
                rows="5"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <span
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex py-3 d-flex justify-space-between"
    >
      <button
        class="v-btn v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save changes
    
        </div>
      </button>
    </div>
  </div>
</div>
`;
